@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-02T08:13:16Z",
-  "count_outdated" : 1552,
-  "uniques_outdated" : 85,
+  "timestamp" : "2022-06-02T16:11:01Z",
+  "count_outdated" : 1555,
+  "uniques_outdated" : 86,
   "count" : 1615,
   "uniques" : 94,
   "views" : [
-    {
-      "timestamp": "2022-05-19T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-20T00:00:00Z",
       "count": 1,
