@@ -1,12 +1,7 @@
 {
-  "count": 63,
+  "count": 60,
   "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-05-19T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-20T00:00:00Z",
       "count": 1,
