@@ -1,3 +1,10 @@
+2022-06-02T16:11:01Z:
+* notice: last 14d: unq all: 1 60
+* notice: prev accum: outdated-unq outdated-all / unq all: 85 1552 / 94 1615
+* notice: next accum: outdated-unq outdated-all / unq all: 86 1555 / 94 1615
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-05-19] / []
+
 2022-06-02T08:13:16Z:
 * notice: last 14d: unq all: 1 63
 * notice: prev accum: outdated-unq outdated-all / unq all: 85 1552 / 93 1611
